# mithril-rust

./: README.md  package.json  pnpm-lock.yaml
src-backend/: Cargo.toml
src-backend/migrates/: init.sql
src-backend/src/: lib.rs  main.rs
src-backend/src/api/: mod.rs  request.rs  router.rs
src-backend/src/api/middleware/: mod.rs
src-backend/src/api/todo/: api.rs
src-backend/src/api/user/: api.rs  mod.rs
src-backend/src/application/todo/: service.rs
src-backend/src/application/user/: service.rs
src-backend/src/domain/: mod.rs
src-backend/src/domain/entities/: todo.rs  user.rs
src-backend/src/domain/repository/: todo.rs  user.rs
src-backend/src/infastructure/db/: mod.rs  mysql.rs  postgresql.rs
src-backend/src/infastructure/db/todo/: mod.rs  mysql.rs  postgresql.rs
src-backend/src/infastructure/db/user/: mod.rs  mysql.rs  postgresql.rs
src-backend/src/utils/: jwt.rs  mod.rs  verification.rs
src-backend/src/utils/encryption/: password.rs
src-tauri/: Cargo.toml  tauri.conf.json
