[package]
name = "src-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "*",features = ["macros"]}
sqlx = { version = "0.7.3", features = [
  "mysql",
  "runtime-tokio",
  "chrono",
  "migrate",
  "macros",
] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
anyhow = "*"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
chrono = {version="0.4.31",features=["serde"]}
async-trait = "0.1.77"
dotenv = "0.15.0"
log = "0.4.20"
